tests/ui/fail/multiple_skip_remaining.stderr
error: Multiple #[skip_remaining] attributes in "Named"
  --> tests/ui/fail/multiple_skip_remaining.rs:16:5
   |
16 |     #[skip_remaining]
   |     ^^^^^^^^^^^^^^^^^

error: Multiple #[skip_remaining] attributes in "Unnamed"
  --> tests/ui/fail/multiple_skip_remaining.rs:24:5
   |
24 |     #[skip_remaining]
   |     ^^^^^^^^^^^^^^^^^
